--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -15,8 +15,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: "24"
+          node-version-file: '.nvmrc'
           cache: "pnpm"
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Install system dependencies
         run: |
@@ -25,9 +28,6 @@ jobs:
 
       - name: Install github-linguist
         run: sudo gem install github-linguist
-
-      - name: Install pnpm
-        run: npm install -g pnpm@10
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
